update for img alt in portfolio

--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
             	<div class="row portfolio-container">
                 	<div class="col-lg-4 col-md-6 mb-4 portfolio-item first">
                     	<div class="position-relative overflow-hidden mb-2">
-                        	<img class="img-fluid rounded w-100" src="img/portfolio-1.jpg" alt="">
+                        	<img class="img-fluid rounded w-100" src="img/portfolio-1.jpg" alt="portfolio-1 picture">
                         	<div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
                             	<a href="img/portfolio-1.jpg" data-lightbox="portfolio">
                                 	<i class="fa fa-plus text-white" style="font-size: 60px;"></i>
@@ -417,7 +417,7 @@
                 	</div>
                 	<div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
                     	<div class="position-relative overflow-hidden mb-2">
-                        	<img class="img-fluid rounded w-100" src="img/portfolio-2.jpg" alt="">
+                        	<img class="img-fluid rounded w-100" src="img/portfolio-2.jpg" alt="portfolio-2 picture">
                         	<div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
                             	<a href="img/portfolio-2.jpg" data-lightbox="portfolio">
                                 	<i class="fa fa-plus text-white" style="font-size: 60px;"></i>
@@ -427,7 +427,7 @@
                 	</div>
                 	<div class="col-lg-4 col-md-6 mb-4 portfolio-item third">
                     	<div class="position-relative overflow-hidden mb-2">
-                        	<img class="img-fluid rounded w-100" src="img/portfolio-3.jpg" alt="">
+                        	<img class="img-fluid rounded w-100" src="img/portfolio-3.jpg" alt="portfolio-3 picture">
                         	<div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
                             	<a href="img/portfolio-3.jpg" data-lightbox="portfolio">
                                 	<i class="fa fa-plus text-white" style="font-size: 60px;"></i>
@@ -437,7 +437,7 @@
                 	</div>
                 	<div class="col-lg-4 col-md-6 mb-4 portfolio-item first">
                     	<div class="position-relative overflow-hidden mb-2">
-                        	<img class="img-fluid rounded w-100" src="img/portfolio-4.jpg" alt="">
+                        	<img class="img-fluid rounded w-100" src="img/portfolio-4.jpg" alt="portfolio-4 picture">
                         	<div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
                             	<a href="img/portfolio-4.jpg" data-lightbox="portfolio">
                                 	<i class="fa fa-plus text-white" style="font-size: 60px;"></i>
@@ -447,7 +447,7 @@
                 	</div>
                 	<div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
                     	<div class="position-relative overflow-hidden mb-2">
-                        	<img class="img-fluid rounded w-100" src="img/portfolio-5.jpg" alt="">
+                        	<img class="img-fluid rounded w-100" src="img/portfolio-5.jpg" alt="portfolio-5 picture">
                         	<div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
                             	<a href="img/portfolio-5.jpg" data-lightbox="portfolio">
                                 	<i class="fa fa-plus text-white" style="font-size: 60px;"></i>
@@ -457,7 +457,7 @@
                 	</div>
                 	<div class="col-lg-4 col-md-6 mb-4 portfolio-item third">
                     	<div class="position-relative overflow-hidden mb-2">
-                        	<img class="img-fluid rounded w-100" src="img/portfolio-6.jpg" alt="">
+                        	<img class="img-fluid rounded w-100" src="img/portfolio-6.jpg" alt="portfolio-6 picture">
                         	<div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
                             	<a href="img/portfolio-6.jpg" data-lightbox="portfolio">
                                 	<i class="fa fa-plus text-white" style="font-size: 60px;"></i>
