footer bg class update

--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
        	<!-- Contact End -->
 
        	<!-- Footer Start -->
-       	<div class="container-fluid bg-primary text-white mt-5 py-1 px-sm-1 px-md-5">
+       	<div class="container-fluid footer-bg text-white mt-5 py-1 px-sm-1 px-md-5">
        		<div class="container text-center py-5">
        			<div class="d-flex justify-content-center mb-4">
        				<a class="btn btn-light btn-social mr-2" href="https://twitter.com/ahmed_ishraq" target="_blank"><i class="fab fa-twitter"></i></a>
