timeline for appreciation raw

--- a/index.html
+++ b/index.html
@@ -481,6 +481,39 @@
        	<!-- Potfolio Ends -->
 
 
+		<!-- Timeline starts -->
+		<div class="container-fluid py-5">
+			<div class="container">
+				<div class="position-relative d-flex align-items-center justify-content-center">
+					<h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">
+					Certificates</h1>
+					<h1 class="position-absolute text-uppercase text-primary">Appreciation</h1>
+				</div>
+			</div>
+		</div>		
+		<div class="timeline body-timeline">
+			<div class="container-timeline left">
+				<div class="content-timeline">
+					<h2>2017</h2>
+					<p>Appreciation Certificate</p>
+				</div>
+			</div>
+			<div class="container-timeline right">
+				<div class="content-timeline">
+					<h2>2016</h2>
+					<p>Co-Curricular Activities Certificate</p>
+				</div>
+			</div>
+			<div class="container-timeline left">
+				<div class="content-timeline">
+					<h2>2015</h2>
+					<p>Online Course Certificate</p>
+				</div>
+			</div>
+		</div>
+		<!-- Timeline ends -->
+
+
        	<!-- Testimonial Start -->
        	<div class="container-fluid py-5" id="testimonial">
        		<div class="container">
