timeline added in navbar

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                 <a href="#skill" class="nav-item nav-link">Skill</a>
                 <a href="#service" class="nav-item nav-link">Service</a>
                 <a href="#portfolio" class="nav-item nav-link">Portfolio</a>
+				<a href="#appreciation" class="nav-item nav-link">Appreciation</a>
                 <a href="#testimonial" class="nav-item nav-link">Review</a>
                 <a href="#contact" class="nav-item nav-link">Contact</a>
             </div>
@@ -482,7 +483,7 @@
 
 
 		<!-- Timeline starts -->
-		<div class="container-fluid py-5">
+		<div class="container-fluid py-5" id="appreciation">
 			<div class="container">
 				<div class="position-relative d-flex align-items-center justify-content-center">
 					<h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">
