new look for social media icon raw dev

--- a/index.html
+++ b/index.html
@@ -118,6 +118,29 @@
        					<a class="btn btn-light btn-social mr-2" href="https://www.instagram.com/ahmed_ishraq" target="_blank"><i class="fab fa-instagram"></i></a>
        					<a class="btn btn-light btn-social mr-2" href="https://github.com/ahmedishraq" target="_blank"><i class="fab fa-github"></i></a>   
 					</div>
+
+					<!--new social media icon testing start  -->
+					<div class="wrapper">
+						<div class="icon facebook">
+							<div class="tooltip">Facebook</div>
+							<span><i class="fab fa-facebook-f"></i></span>
+						</div>
+						<div class="icon twitter">
+							<div class="tootltip">Twitter</div>
+							<span><i class="fab fa-twitter"></i></span>
+						</div>
+						<div class="icon instagram">
+							<div class="tooltip">Instagram</div>
+							<span><i class="fab fa-instagram"></i></span>
+						</div>
+						<div class="icon github">
+							<div class="fa fa-github"></div>
+							<span><i class="fab fa-github"></i></span>
+						</div>
+					</div>	
+					<!-- new social media icon testing end -->
+
+
 					<div class="d-flex align-items-center justify-content-center justify-content-lg-startpt-5">
         					<!-- <i class="fa fa-2x fa-download bg-primary text-white mr-1"></i> -->
         					<a href="https://drive.google.com/file/d/1CE9oWow79XBhrm5QUxYfvpyVE30aP1QY/view?usp=sharing" target="_blank" class="btn btn-light mr-4"><i class="fa fa-download"></i>  Download CV</a>
