social new icon rel

--- a/index.html
+++ b/index.html
@@ -111,14 +111,14 @@
         				<img class="img-fluid w-100 rounded-circle shadow-sm" src="img/profile.jpg" alt="Profile Picture">
         			</div>
         			<!-- Testing social media icon Start -->
-        			<div class="d-flex">  
+        			<!-- <div class="d-flex">  
 						<a class="btn btn-light btn-social mr-2" href="https://twitter.com/ahmed_ishraq" target="_blank"><i class="fab fa-twitter"></i></a>
        					<a class="btn btn-light btn-social mr-2" href="https://facebook.com/ishraq.ahmed.14" target="_blank"><i class="fab fa-facebook-f"></i></a>
        					<a class="btn btn-light btn-social mr-2" href="http://linkedin.com/in/ishraq-ahmed-esha-244978172" target="_blank"><i class="fab fa-linkedin-in"></i></a>
        					<a class="btn btn-light btn-social mr-2" href="https://www.instagram.com/ahmed_ishraq" target="_blank"><i class="fab fa-instagram"></i></a>
        					<a class="btn btn-light btn-social mr-2" href="https://github.com/ahmedishraq" target="_blank"><i class="fab fa-github"></i></a>   
 					</div>
-
+ -->
 					<!--new social media icon testing start  -->
 					<div class="wrapper">
 						<div class="icon facebook">
@@ -126,7 +126,7 @@
 							<span><i class="fab fa-facebook-f"></i></span>
 						</div>
 						<div class="icon twitter">
-							<div class="tootltip">Twitter</div>
+							<div class="tooltip">Twitter</div>
 							<span><i class="fab fa-twitter"></i></span>
 						</div>
 						<div class="icon instagram">
@@ -134,14 +134,18 @@
 							<span><i class="fab fa-instagram"></i></span>
 						</div>
 						<div class="icon github">
-							<div class="fa fa-github"></div>
-							<span><i class="fab fa-github"></i></span>
+							<div class="tooltip">Github</div>
+							<a href="https://github.com/ahmedishraq" target="_blank"><span><i class="fab fa-github"></i></span>
+						</div>
+						<div class="icon linkedin">
+							<div class="tooltip">Linkedin</div>
+							<span><i class="fab fa-linkedin-in"></i></span>
 						</div>
 					</div>	
 					<!-- new social media icon testing end -->
 
 
-					<div class="d-flex align-items-center justify-content-center justify-content-lg-startpt-5">
+					<div class="d-flex align-items-cemter justify-content-center justify-content-lg-startpt-5">
         					<!-- <i class="fa fa-2x fa-download bg-primary text-white mr-1"></i> -->
         					<a href="https://drive.google.com/file/d/1CE9oWow79XBhrm5QUxYfvpyVE30aP1QY/view?usp=sharing" target="_blank" class="btn btn-light mr-4"><i class="fa fa-download"></i>  Download CV</a>
 
