link added to new social media icon

--- a/index.html
+++ b/index.html
@@ -123,27 +123,26 @@
 					<div class="wrapper">
 						<div class="icon facebook">
 							<div class="tooltip">Facebook</div>
-							<span><i class="fab fa-facebook-f"></i></span>
+							<a href="https://facebook.com/ishraq.ahmed.14" target="_blank"><span><i class="fab fa-facebook-f"></i></span></a>
 						</div>
 						<div class="icon twitter">
 							<div class="tooltip">Twitter</div>
-							<span><i class="fab fa-twitter"></i></span>
+							<a href="https://twitter.com/ahmed_ishraq" target="_blank"><span><i class="fab fa-twitter"></i></span></a>
 						</div>
 						<div class="icon instagram">
 							<div class="tooltip">Instagram</div>
-							<span><i class="fab fa-instagram"></i></span>
+							<a href="https://instagram.com/ahmed_ishraq" target="_blank"><span><i class="fab fa-instagram"></i></span></a>
 						</div>
 						<div class="icon github">
 							<div class="tooltip">Github</div>
-							<a href="https://github.com/ahmedishraq" target="_blank"><span><i class="fab fa-github"></i></span>
+							<a href="https://github.com/ahmedishraq" target="_blank"><span><i class="fab fa-github"></i></span></a>
 						</div>
 						<div class="icon linkedin">
 							<div class="tooltip">Linkedin</div>
-							<span><i class="fab fa-linkedin-in"></i></span>
+							<a href="http://linkedin.com/in/ishraq-ahmed-esha-244978172" target="_blank"><span><i class="fab fa-linkedin-in"></i></span>
 						</div>
 					</div>	
 					<!-- new social media icon testing end -->
-
 
 					<div class="d-flex align-items-cemter justify-content-center justify-content-lg-startpt-5">
         					<!-- <i class="fa fa-2x fa-download bg-primary text-white mr-1"></i> -->
