--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
 		<!-- Font Awesome -->
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     	<!-- Libraries Stylesheet -->
     	<link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
@@ -51,6 +52,26 @@
 
 		<!-- Navbar Start -->
     <nav class="navbar fixed-top shadow-sm navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-lg-5">
+
+    	<!-- new animated hourglass icon start -->
+    	<div id="div1" class="fa"></div>
+		<script>
+			function hourglass() {
+  				var a;
+  				a = document.getElementById("div1");
+  				a.innerHTML = "&#xf251;";
+  				setTimeout(function () {
+      				a.innerHTML = "&#xf252;";
+    			}, 1000);
+  				setTimeout(function () {
+      				a.innerHTML = "&#xf253;";
+    			}, 2000);
+			}
+			hourglass();
+			setInterval(hourglass, 3000);
+			</script>
+		<!-- new animated hourglass icon end -->
+
         <a href="index.html" class="navbar-brand ml-lg-3">
             <h1 class="m-0 display-5" style="font-family: cursive;"><span class="text-primary">IAE</span></h1>
         </a>
