--- a/index.html
+++ b/index.html
@@ -195,7 +195,10 @@
         			</div>
         			<div class="col-lg-7">
         				<h3 class="mb-4">Software Developer</h3>
-        				<p>Interested to work in the computer software industry alongside interested to work in Artificial Intelligence (AI) sector as well . Skilled in, OOP (Object Oriented Programming), JAVA, Python, Data Analysis, Data Visualization, Microsoft Office, Event Management, IT Strategy, and Problem Solving . Currently pursuing my undergrad degree with a Bachelor of Science - (B.Sc.) focused in Computer Science and Engineering (CSE) from BRAC University.</p>
+  						<!-- About Typewriter start  -->
+    					<p>Interested to work in the computer software industry alongside interested to work in Artificial Intelligence (AI) sector as well . Skilled in, OOP (Object Oriented Programming), JAVA, Python, Data Analysis, Data Visualization, Microsoft Office, Event Management, IT Strategy, and Problem Solving . Currently pursuing my undergrad degree with a Bachelor of Science - (B.Sc.) focused in Computer Science and Engineering (CSE) from BRAC University.</p>
+    					<!-- About Typewriter end -->
+  							
         				<div class="row mb-3">
         					<div class="col-sm-6 py-2"><h6>Name: <span class="text-secondary">Ishraq Ahmed Esha</span></h6></div>
         					<div class="col-sm-6 py-2"><h6>Birthday: <span class="text-secondary">July 04, 1999</span></h6></div>
@@ -227,8 +230,8 @@
         						<h6 class="font-weight-bold">JAVA</h6>
         						<h6 class="font-weight-bold">85%</h6>
         					</div>
-        					<div class="progress">
-        						<div class="progress-bar progress-bar-striped progress-bar-animated bg-primary" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+        					<div class="progress-skill">
+        						<div class="progress-width java">&nbsp;</div>
         					</div>
         				</div>
         				<div class="skill mb-4">
@@ -236,8 +239,8 @@
         						<h6 class="font-weight-bold">Python/ Django/ Mysql</h6>
         						<h6 class="font-weight-bold">65%</h6>
         					</div>
-        					<div class="progress">
-        						<div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+        					<div class="progress-skill">
+        						<div class="progress-width python">&nbsp;</div>
         					</div>
         				</div>
         				<div class="skill mb-4">
@@ -245,8 +248,8 @@
         						<h6 class="font-weight-bold">HTML/ CSS/ JavaScript/ Bootstrap</h6>
         						<h6 class="font-weight-bold">80%</h6>
         					</div>
-        					<div class="progress">
-        						<div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+        					<div class="progress-skill">
+        						<div class="progress-width html">&nbsp;</div>
         					</div>
         				</div>
         				<div class="skill mb-4">
@@ -254,8 +257,8 @@
         						<h6 class="font-weight-bold">Android/ Spring-Boot</h6>
         						<h6 class="font-weight-bold">50%</h6>
         					</div>
-        					<div class="progress">
-        						<div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+        					<div class="progress-skill">
+        						<div class="progress-width android">&nbsp;</div>
         					</div>
         				</div>
         				<div class="skill mb-4">
@@ -263,8 +266,8 @@
         						<h6 class="font-weight-bold">TeamWork/ Communication/ Creativity/ Innovation</h6>
         						<h6 class="font-weight-bold">80%</h6>
         					</div>
-        					<div class="progress">
-        						<div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+        					<div class="progress-skill">
+        						<div class="progress-width teamwork">&nbsp;</div>
         					</div>
         				</div>
         			</div>
@@ -274,8 +277,8 @@
         						<h6 class="font-weight-bold">AI/ Data Science/ Kaggle</h6>
         						<h6 class="font-weight-bold">50%</h6>
         					</div>
-        					<div class="progress">
-        						<div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+        					<div class="progress-skill">
+        						<div class="progress-width ai">&nbsp;</div>
         					</div>
         				</div>
         				<div class="skill mb-4">
@@ -284,8 +287,8 @@
 								</h6>
         						<h6 class="font-weight-bold">60%</h6>
         					</div>
-        					<div class="progress">
-        						<div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+        					<div class="progress-skill">
+        						<div class="progress-width illustrator">&nbsp;</div>
         					</div>
         				</div>
         				<div class="skill mb-4">
@@ -293,8 +296,8 @@
         						<h6 class="font-weight-bold">Word/ Excel/ PowerPoint/ Docs Writing</h6>
         						<h6 class="font-weight-bold">80%</h6>
         					</div>
-        					<div class="progress">
-        						<div class="progress-bar progress-bar-striped progress-bar-animated bg-primary" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+        					<div class="progress-skill">
+        						<div class="progress-width word">&nbsp;</div>
         					</div>
         				</div>
         				<div class="skill mb-4">
@@ -302,8 +305,8 @@
         						<h6 class="font-weight-bold">Git/ Arduino/ Jetson Nano</h6>
         						<h6 class="font-weight-bold">50%</h6>
         					</div>
-        					<div class="progress">
-        						<div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+        					<div class="progress-skill">
+        						<div class="progress-width git">&nbsp;</div>
         					</div>
         				</div>
         				<div class="skill mb-4">
@@ -311,14 +314,15 @@
         						<h6 class="font-weight-bold">Data Analysis/ Problem Solving/ Critical Thinking</h6>
         						<h6 class="font-weight-bold">80%</h6>
         					</div>
-        					<div class="progress">
-        						<div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+        					<div class="progress-skill">
+        						<div class="progress-width data">&nbsp;</div>
         					</div>
         				</div>
         			</div>
         		</div>
         	</div>
         </div>
+
         <!-- Skill End -->
 
         <!-- Qualification Start -->
@@ -690,6 +694,9 @@
     	<script src="lib/owlcarousel/owl.carousel.min.js"></script>
     	<script src="lib/isotope/isotope.pkgd.min.js"></script>
     	<script src="lib/lightbox/js/lightbox.min.js"></script>
+
+    	<!-- About Typewriter JavaScript -->
+    	<script src="js/typewriter.js"></script>
 
     	<!-- Template JavaScript -->
     	<script src="js/main.js"></script>
