download cv button update

--- a/index.html
+++ b/index.html
@@ -153,28 +153,25 @@
 						<div class="icon instagram">
 							<div class="tooltip">Instagram</div>
 							<a href="https://instagram.com/ahmed_ishraq" target="_blank"><span><i class="fab fa-instagram"></i></span></a>
-						</div>
+						</div>	
 						<div class="icon github">
 							<div class="tooltip">Github</div>
 							<a href="https://github.com/ahmedishraq" target="_blank"><span><i class="fab fa-github"></i></span></a>
 						</div>
 						<div class="icon linkedin">
 							<div class="tooltip">Linkedin</div>
-							<a href="http://linkedin.com/in/ishraq-ahmed-esha-244978172" target="_blank"><span><i class="fab fa-linkedin-in"></i></span>
+							<a href="http://linkedin.com/in/ishraq-ahmed-esha-244978172" target="_blank"><span><i class="fab fa-linkedin-in"></i></span></a>
+						</div>
+						<div class="icon cv">
+							<div class="tooltip">Download&nbsp;CV</div>
+							<a href="https://drive.google.com/file/d/1CE9oWow79XBhrm5QUxYfvpyVE30aP1QY/view?usp=sharing" target="_blank"><span><i class="fa fa-download"></i></span></a>
 						</div>
 					</div>	
 					<!-- new social media icon testing end -->
 
-					<div class="d-flex align-items-cemter justify-content-center justify-content-lg-startpt-5">
-        					<!-- <i class="fa fa-2x fa-download bg-primary text-white mr-1"></i> -->
-        					<a href="https://drive.google.com/file/d/1CE9oWow79XBhrm5QUxYfvpyVE30aP1QY/view?usp=sharing" target="_blank" class="btn btn-light mr-4"><i class="fa fa-download"></i>  Download CV</a>
-
-        					
-        					<!-- For Play Button -->
-        					<!--<a href="" class="btn btn-blue d-none d-sm-block">Play Video</a>-->
-
-        					<!--<a class="btn btn-light btn-social mr-2" href="https://github.com/ahmedishraq" target="_blank"><i class="fab fa-github"></i></a> -->
-        				</div>
+					<!-- <div class="d-flex align-items-cemter justify-content-center justify-content-lg-startpt-5">
+        					<a href="https://drive.google.com/file/d/1CE9oWow79XBhrm5QUxYfvpyVE30aP1QY/view?usp=sharing" target="_blank" class="btn btn-light mr-4"><i class="fa fa-download"></i>  Download CV</a>		
+        			</div> -->
         		</div>
         	</div>
         	<!-- Testing social media icon End-->
