--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 						</div>
 						<div class="icon cv">
 							<div class="tooltip">Download&nbsp;CV</div>
-							<a href="https://drive.google.com/file/d/1CE9oWow79XBhrm5QUxYfvpyVE30aP1QY/view?usp=sharing" target="_blank"><span><i class="fa fa-download"></i></span></a>
+							<a href="https://drive.google.com/file/d/1CE9oWow79XBhrm5QUxYfvpyVE30aP1QY/view?usp=sharing" target="_blank"><span><i class="fas fa-file-download"></i></span></a>
 						</div>
 					</div>	
 					<!-- new social media icon testing end -->
