--- a/index.html
+++ b/index.html
@@ -111,14 +111,14 @@
 
 
         <!-- Header Start -->
-        <div class="container-fluid bg-primary d-flex align-items-center mb-5 py-5" id="home" style="min-height: 100vh;">
+        <div class="container-fluid landing-bg d-flex align-items-center mb-5 py-5" id="home" style="min-height: 100vh;">
         	<div class="container">
         		<div class="row align-items-center">
         			<div class="col-lg-7 col-md-10 col-sm-12 text-center text-lg-left">
         				<h3 class="text-white font-weight-normal mb-3">Hello, I am</h3>
         				<h1 class="display-3 text-uppercase text-primary mb-2" style="-webkit-text-stroke: 4px #ffffff;">Ishraq Ahmed Esha</h1>
         				<h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1> 
-        				<div class="typed-text d-none">Software Developer, Competitive Programmer, Engineer, Critical Thinker, Problem Solver, Ethical Hacker, Back End Developer, Cyber Security Expert, Machine Learning Engineer, Artificial Intelligence Expert, Data Analyst</div>
+        				<div class="typed-text d-none">Software Developer, Competitive Programmer, Engineer, Critical Thinker, Problem Solver, Ethical Hacker, Backend Developer, Cyber Security Expert, Machine Learning Engineer, Artificial Intelligence Expert, Data Analyst</div>
         				<!--<div class="d-flex align-items-center justify-content-center justify-content-lg-startpt-5">
         					 <i class="fa fa-2x fa-download bg-primary text-white mr-1"></i>
         					<a href="https://drive.google.com/file/d/1kDrS3ijTN12mtLgEBJCzGwlBmswuJ7cP/view?usp=sharing" target="_blank" class="btn btn-white mr-4">Download CV</a>
