aos animation update in service

--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
        				<h1 class="position-absolute text-uppercase text-primary">My Service</h1>
        			</div>
        			<div class="row pb-3">
-       				<div class="service-box col-lg-4 col-md-6 text-center mb-5">
+       				<div class="service-box col-lg-4 col-md-6 text-center mb-5" data-aos="slide-right" data-aos-duration="3000">
        					<div class="d-flex align-items-center justify-content-center mb-4">
        						<i class="fa fa-2x fa-laptop-code service-icon bg-primary text-white mr-3"></i>
        						<h4 class="font-weight-bold m-0">Software Development</h4>
@@ -406,7 +406,7 @@
        					<p>Management Software focused with database and user friendly graphical user interface (GUI)</p>
        					<a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
        				</div>
-       				<div class="service-box col-lg-3 col-md-6 text-center mb-5">
+       				<div class="service-box col-lg-3 col-md-6 text-center mb-5" data-aos="slide-down" data-aos-duration="3000">
         				<div class="d-flex align-items-center justify-content-center mb-4">
         					<i class="fa fa-2x fa-chart-line service-icon bg-primary text-white mr-3"></i>
         					<h4 class="font-weight-bold m-0">Data Entry</h4>
@@ -414,7 +414,7 @@
        					<p>Data entry with data manipulate and data visualize and gather the data for stroing and prepare to use those data for future</p>
         				<a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
         			</div>
-       				<div class="service-box col-lg-4 col-md-6 text-center mb-5">
+       				<div class="service-box col-lg-4 col-md-6 text-center mb-5" data-aos="slide-left" data-aos-duration="3000">
        					<div class="d-flex align-items-center justify-content-center mb-4">
        						<i class="fa fa-2x fa-code service-icon bg-primary text-white mr-3"></i>
        						<h4 class="font-weight-bold m-0">Web Development</h4>
@@ -422,7 +422,7 @@
        					<p>Website andWeb app developer with backend management and user friendy simple UI/UX design cool </p>
         				<a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
         			</div>
-        			<div class="service-box col-lg-4 col-md-6 text-center mb-5">
+        			<div class="service-box col-lg-4 col-md-6 text-center mb-5" data-aos="slide-right" data-aos-duration="3000">
         				<div class="d-flex align-items-center justify-content-center mb-4">
        						<i class="fa fa-2x fa-paste service-icon bg-primary text-white mr-3"></i>
        						<h4 class="font-weight-bold m-0">Copy Writer</h4>
@@ -430,7 +430,7 @@
         				<p>Copy a content for describing or presenting to others with destinguish design and user friendly overview</p>
         				<a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
         			</div>
-       				<div class="service-box col-lg-3 col-md-6 text-center mb-5">
+       				<div class="service-box col-lg-3 col-md-6 text-center mb-5" data-aos="slide-up" data-aos-duration="3000">
        					<div class="d-flex align-items-center justify-content-center mb-4">
        						<i class="fa fa-2x fa-robot service-icon bg-primary text-white mr-3"></i>
        						<h4 class="font-weight-bold m-0">Robotics Project</h4>
@@ -438,7 +438,7 @@
        					<p>Support for next gen industry changer or any kind of robotics project which is supported by a mixture of soft and harware with AI power</p>
         				<a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
         			</div>
-       				<div class="service-box col-lg-4 col-md-6 text-center mb-5">
+       				<div class="service-box col-lg-4 col-md-6 text-center mb-5" data-aos="slide-left" data-aos-duration="3000">
        					<div class="d-flex align-items-center justify-content-center mb-4">
        						<i class="fa fa-2x fa-database service-icon bg-primary text-white mr-3"></i>
        						<h4 class="font-weight-bold m-0">Database Management</h4>
